<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"
        android:text="@string/TextView"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/Button2Text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/CheckBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_below="@id/imageButton"
        android:hint="@string/hint"
        android:inputType="textPersonName" />

</GridLayout>