<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




        <TextView
            android:id="@+id/textView2"
            android:layout_width="232dp"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:text="@string/TextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="30sp" />



        <Button
            android:id="@+id/button2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/textView2"
            android:text="@string/Button2Text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/button2"
            android:layout_below="@id/textView2"
            android:text="@string/CheckBox" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:src="@drawable/flag" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageButton"
        android:layout_below="@id/button2"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:hint="@string/hint"
        android:inputType="textPersonName" />


</RelativeLayout>