<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:text="@string/TextView"
        android:textSize="30sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/Button2Text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/CheckBox" />
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/Switch" />


</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="textPersonName" />

</LinearLayout>


</LinearLayout>